--- a/css/contact.css
+++ b/css/contact.css
@@ -93,7 +93,7 @@ body {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  background: var(--text);
+  background: var(--dark);
   display: flex;
   align-items: center;
   justify-content: center;
